# wasi-napi

./: .gitignore  .npmignore  CMakeLists.txt  README.md  api-extractor.json  package.json  tsconfig.json  tsgo.config.js
include/: common.h  js_native_api.h  napi-inl.h  napi.h  node_api.h  wapi.h
src/: index.ts  wapi.c
src/api/: api.ts  implement.ts  index.ts  util.ts
src/api/impl/: env.ts  error.ts  function.ts  life.ts  promise.ts  property.ts  script.ts  value-operation.ts  version.ts  wrap.ts
src/api/value/: convert2c.ts  convert2napi.ts  create.ts  global.ts
src/runtime/: Context.ts  Deferred.ts  EnvStore.ts  Finalizer.ts  Handle.ts  HandleScope.ts  Reference.ts  ScopeStore.ts  Store.ts  env.ts  errors.ts  index.ts  util.ts
src/runtime/typings/: common.d.ts  ctype.d.ts  napi.d.ts
test/: .gitignore  CMakeLists.txt  build.sh  test.cmake  util.js
test/arg/: CMakeLists.txt  arg.wasm
test/array/: CMakeLists.txt
test/bigint/: CMakeLists.txt
test/callback/: CMakeLists.txt
test/constructor/: CMakeLists.txt
test/conversion/: CMakeLists.txt
test/dataview/: CMakeLists.txt
test/date/: CMakeLists.txt
test/env/: CMakeLists.txt
test/error/: CMakeLists.txt
test/exception/: CMakeLists.txt  exception.finalizer.test.js
test/fnfac/: CMakeLists.txt
test/fnwrap/: CMakeLists.txt  myobject.cc
test/function/: CMakeLists.txt
test/general/: CMakeLists.txt  binding.c  general.test.js
test/newtarget/: CMakeLists.txt
test/node-addon-api/: CMakeLists.txt  error.test.js
test/node-addon-api/common/: index.js
test/number/: CMakeLists.txt
test/object/: CMakeLists.txt
test/objfac/: CMakeLists.txt
test/objwrap/: CMakeLists.txt
test/passwrap/: CMakeLists.txt
test/promise/: CMakeLists.txt
test/property/: CMakeLists.txt
test/ref/: CMakeLists.txt
test/ref_double_free/: CMakeLists.txt
test/scope/: CMakeLists.txt
test/script/: test-entry.js  test.js
test/string/: CMakeLists.txt
test/symbol/: CMakeLists.txt
test/typedarray/: CMakeLists.txt
test/version/: CMakeLists.txt  version.test.js
